--- a/package.json
+++ b/package.json
@@ -9,13 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.0.2",
+    "@reduxjs/toolkit": "^2.2.5",
     "autoprefixer": "10.4.19",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.3",
+    "lucide-react": "^0.379.0",
     "next": "14.2.3",
     "postcss": "8.4.38",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "tailwindcss": "3.4.3"
+    "react-redux": "^9.1.2",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss": "3.4.3",
+    "tailwindcss-animate": "^1.0.7"
   }
 }
